# rustdesk

./: Cargo.toml  build.py
flutter/: build_windows.txt  deploy.sh  run.sh
flutter/lib/: common.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_setting_page.dart  install_page.dart
flutter/lib/models/: native_model.dart  platform_model.dart
flutter/web/: README.md  manifest.json
flutter/web/js/: package-lock.json  package.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc
libs/hbb_common/src/: config.rs
libs/portable/: Cargo.toml  app_metadata.toml
src/: main.rs
